# ticker

./: .gitignore  compose.yaml  main.py  pyproject.toml
client/: app.py  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css  types.ts
client/src/components/: Header.tsx  MarketBanner.tsx  StockCard.tsx  StockChart.tsx  StockDashboard.tsx
client/src/pages/: StockDetail.tsx
server/: main.py
server/api/: routes.py  schemas.py
server/core/: database.py  models.py
server/pipeline/: collector.py  test_env.py
server/services/: predictor.py
