[project]
name = "ticker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "finance-datareader==0.9.101",
    "pandas==2.3.3",
    "pandas-stubs~=2.3.3",
    "psycopg2-binary==2.9.11",
    "python-dotenv==1.2.1",
    "sqlalchemy==2.0.45",
]
